Change display none to visibility hidden for page numbers to avoid changing position in scroll window. Hide spinner if jumped to an already loaded page.

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -624,3 +624,7 @@ padding-right: 15px;
     left: 50%;
     z-index:20;
 }
+
+.invisible{
+    visibility:hidden;
+}
